--- a/DemoApp/Fruits.plist
+++ b/DemoApp/Fruits.plist
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>SchemeUserState</key>
-	<dict>
-		<key>DemoApp.xcscheme_^#shared#^_</key>
-		<dict>
-			<key>orderHint</key>
-			<integer>4</integer>
-		</dict>
-	</dict>
-</dict>
+<array>
+	<string>Orange</string>
+	<string>Mango</string>
+	<string>Kiwi</string>
+	<string>Banana</string>
+</array>
 </plist>
